# Goit_HW_web_DZ_13_part_2

./: Dockerfile  docker-compose.yml  pyproject.toml
hw10/hw10/: settings.py
hw10/quotes/: views.py
hw10/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_alter_author_fullname.py
hw10/users/: views.py
