[tool.poetry]
name = "Goit_HW_web_DZ_10_Django"
version = "2.0.0"
description = ""
authors = ["Rap82 <Rap82@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
pymongo = "^4.5.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
